--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": "^6.11.1"
+  },  
   "bugs": {
     "url": "https://github.com/Financial-Times/email-unsubscribe-category-landing-page/issues"
   },
