--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Financial-Times/email-unsubscribe-category-landing-page#readme",
   "dependencies": {
+    "compression": "^1.7.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0"
