--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "engines": {
     "node": "^6.11.1"
-  },  
+  },
   "bugs": {
     "url": "https://github.com/Financial-Times/email-unsubscribe-category-landing-page/issues"
   },
@@ -23,6 +23,7 @@
     "compression": "^1.7.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "sanitize-html": "^1.16.3"
   }
 }
