--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "precommit": "secret-squirrel",
+    "commitmsg": "secret-squirrel-commitmsg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +27,9 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "sanitize-html": "^1.16.3"
+  },
+  "devDependencies": {
+    "@financial-times/secret-squirrel": "^2.8.0",
+    "husky": "^0.14.3"
   }
 }
